updated license to cc

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "json"
   ],
   "author": "Merwan Rodriguez",
-  "license": "MIT",
+  "license": "CC",
   "bugs": {
     "url": "https://github.com/merwan7/Japanese-JSON/issues"
   },
