--- a/package.json
+++ b/package.json
@@ -4,17 +4,30 @@
   "description": "Japanese Syllabary in JSON format",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/merwan7/Japanese-JSON.git"
   },
-  "keywords": ["japanese", "syllabary", "json"],
+  "keywords": [
+    "japanese",
+    "syllabary",
+    "json"
+  ],
   "author": "Merwan Rodriguez",
   "license": "CC",
   "bugs": {
     "url": "https://github.com/merwan7/Japanese-JSON/issues"
   },
-  "homepage": "https://github.com/merwan7/Japanese-JSON#readme"
+  "homepage": "https://github.com/merwan7/Japanese-JSON#readme",
+  "devDependencies": {
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
+    "release-it": "^15.10.1"
+  },
+  "lint-staged": {
+    "*.{json,md,js,ts}": "prettier --write"
+  }
 }
