--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Japanese Syllabary in JSON format",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
     "prepare": "husky install"
   },
   "repository": {
@@ -25,9 +24,7 @@
   "devDependencies": {
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
     "release-it": "^15.10.1"
-  },
-  "lint-staged": {
-    "*.{json,md,js,ts}": "prettier --write"
   }
 }
